implemented ajax requests for logging in

--- a/frontEnd/login.html
+++ b/frontEnd/login.html
@@ -11,13 +11,13 @@
 		<script src="https://js.leapmotion.com/leap-0.6.4.min.js"></script>
         <!-- Leapstrap -->
         <script src="js/leapstrap.js"></script>
+        <script src="js/login.js"></script>
 
     </head>
     <body>
-
             <div class="container">
-                <section class="loginform cf" id = "login-form">
-                    <form name="login" action="/login" method="get" accept-charset="utf-8">
+                <section class="loginform cf">
+                    <form name="login" action=" " method="post" accept-charset="utf-8" id="login-form">
                         <ul>
                             <label for="username">Username</label>
                             <li>
