--- a/createAccount.html
+++ b/createAccount.html
@@ -4,12 +4,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="login.css">
         <!-- Leapstrap -->
-        <link rel="stylesheet" href="http://wilkesalex.github.io/leapstrap/dist/css/leapstrap.css" />
+        <link href="css/leapstrap.css" rel="stylesheet" media="screen">
         <!-- jQuery (necessary for Leapstrap's JavaScript plugins) -->
-        <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+        <script src="https://code.jquery.com/jquery.js"></script>
         <!-- Leap (http://js.leapmotion.com/) -->
-        <script src="//js.leapmotion.com/0.3.0-beta3/leap.js"></script>
+		<script src="https://js.leapmotion.com/leap-0.6.4.min.js"></script>
         <!-- Leapstrap -->
+        <script src="js/leapstrap.js"></script>
+		
+		<!-- createAccount script -->
         <script src="createAccount.js"></script>
 
 
@@ -23,22 +26,22 @@
                             <label for="username">Username</label>
                             <li>
 
-                                <input type="text" name="username" placeholder="username" required>
+                                <input type="text" name="username" placeholder="username" class="inputfield" required>
                             </li>
                             <label for="password">Password</label>
                             <li>
-                                <input type="password" name="password" placeholder="password" required>
+                                <input type="password" name="password" placeholder="password" class="inputfield" required>
                             </li>
                             <label for="password">Verify Password</label>
                             <li>
-                                <input type="password" name="password" placeholder="password" required>
+                                <input type="password" name="password" placeholder="password" class="inputfield" required>
                             </li>
                             <li>
-                                <input type="submit" value="Login">
+                                <input class="leap-interactive" leap-attractor="true" leap-click-delay="1500" type="submit" value="Login">
                             </li>
                             <li>
                                 <a href="login.html" style="text-decoration : none">
-                                    <input type="button" value="Go Back">
+                                    <input class="leap-interactive" leap-attractor="true" leap-click-delay="1500" type="button" value="Go Back">
                                 </a>
                             </li>
                         </ul>
