Updated matching password when creating account

--- a/frontEnd/createAccount.html
+++ b/frontEnd/createAccount.html
@@ -28,14 +28,14 @@
                             </li>
                             <label for="password">Password</label>
                             <li>
-                                <input type="password" name="password" placeholder="password" required>
+                                <input type="password" name="password" id="password1" placeholder="password" required>
                             </li>
                             <label for="password">Verify Password</label>
                             <li>
-                                <input type="password" name="verifyPassword" placeholder="password" required>
+                                <input type="password" name="verifyPassword" id="password2" placeholder="password" required>
                             </li>
                             <li>
-                                <input type="submit" value="Login">
+                                <input type="submit" value="Login" id="submit">
                             </li>
                             <li>
                                 <a href="login.html" style="text-decoration : none">
