--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -30,7 +30,7 @@
   <p class = "quote">Perfection is not attainable, but if we chase perfection we can catch excellence. --- Vince Lombardi </p>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
   
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.simpleWeather/3.1.0/jquery.simpleWeather.min.js"></script>
+  <script src="js/jquery.simpleWeather.js"></script>
   
   <script src="js/weather.js"></script>
 </body>
