redirect to home when log in

--- a/frontEnd/login.html
+++ b/frontEnd/login.html
@@ -29,7 +29,10 @@
                                 <input type="password" name="password" placeholder="password" required>
                             </li>
                             <li>
-                                <input class="leap-interactive" leap-attractor="true" leap-click-delay="2000" type="submit" value="Login">
+                                <a class="leap-interactive" leap-attractor="true" href="index.html" leap-click-delay="2000" style="text-decoration : none">
+                                    <input class="leap-interactive" leap-attractor="true" leap-click-delay="2000" type="submit" value="Login">
+                                </a>
+                                
 
                             </li>
                             <li>
