--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -51,9 +51,13 @@ function checkTime(i) {
             <div class="windspeed"></div>
         </div>
     </div>
+
+    <iframe src="https://embed.spotify.com/?uri=spotify%3Aalbum%3A5IOyYIEMoaiWQpFz2O5vxY" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
     <div class "container" id = "quote">
         <p>Perfection is not attainable, but if we chase perfection we can catch excellence. --- Vince Lombardi </p>
     </div>
+
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
 
     <script src="js/jquery.simpleWeather.js"></script>
