--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -52,7 +52,8 @@ function checkTime(i) {
         </div>
     </div>
 
-    <iframe src="https://embed.spotify.com/?uri=spotify%3Aalbum%3A5IOyYIEMoaiWQpFz2O5vxY" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
+    <iframe id="pandora-05" src="http://www.pandora.com/88x31-01.html" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" topmargin="0" leftmargin="0" width="88" height="31"></iframe>
+    
     <div class "container" id = "quote">
         <p>Perfection is not attainable, but if we chase perfection we can catch excellence. --- Vince Lombardi </p>
     </div>
