--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -53,6 +53,8 @@ function checkTime(i) {
     </div>
 
     <iframe src="https://embed.spotify.com/?uri=spotify%3Aalbum%3A5IOyYIEMoaiWQpFz2O5vxY" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
+
+    <iframe src="https://calendar.google.com/calendar/embed?src=en.usa%23holiday%40group.v.calendar.google.com&ctz=America/New_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
     <div class "container" id = "quote">
         <p>Perfection is not attainable, but if we chase perfection we can catch excellence. --- Vince Lombardi </p>
     </div>
