--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -37,24 +37,26 @@ function checkTime(i) {
     <body onload="startTime()">
 
     <div class = "center" id="txt"></div>
+    <div class = "container" id = "weather">
+        <div class="container clearfix">
 
-    <div class="container clearfix">
+            <p class="location"></p>
+            <p class="temperature"></p>
+            <div class="climate_bg"></div>
+            <div class="info_bg">
+                <img class="dropicon" src="images/Droplet.svg">
+                <p class="humidity"></p>
 
-        <p class="location"></p>
-        <p class="temperature"></p>
-        <div class="climate_bg"></div>
-        <div class="info_bg">
-            <img class="dropicon" src="images/Droplet.svg">
-            <p class="humidity"></p>
-
-            <img class="windicon" src="images/Wind.svg">
-            <div class="windspeed"></div>
+                <img class="windicon" src="images/Wind.svg">
+                <div class="windspeed"></div>
+            </div>
         </div>
     </div>
 
-    <iframe src="https://embed.spotify.com/?uri=spotify%3Aalbum%3A5IOyYIEMoaiWQpFz2O5vxY" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
-s
-    <iframe src="https://calendar.google.com/calendar/embed?height=300&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=en.usa%23holiday%40group.v.calendar.google.com&amp;color=%23691426&amp;ctz=America%2FNew_York" style="border:solid 1px #777" width="400" height="300" frameborder="0" scrolling="no"></iframe>
+    <iframe id = "spotify" src="https://embed.spotify.com/?uri=spotify%3Aalbum%3A5IOyYIEMoaiWQpFz2O5vxY" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
+    <div class = "container" id = "calendar">
+        <iframe src="https://calendar.google.com/calendar/embed?height=300&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=en.usa%23holiday%40group.v.calendar.google.com&amp;color=%23691426&amp;ctz=America%2FNew_York" style="border:solid 1px #777" width="400" height="300" frameborder="0" scrolling="no"></iframe>
+    </div>
     <div class "container" id = "quote">
         <p>Perfection is not attainable, but if we chase perfection we can catch excellence. --- Vince Lombardi </p>
     </div>
