--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -57,6 +57,9 @@ function checkTime(i) {
     <div class = "container" id = "calendar">
         <iframe src="https://calendar.google.com/calendar/embed?height=300&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=en.usa%23holiday%40group.v.calendar.google.com&amp;color=%23691426&amp;ctz=America%2FNew_York" style="border:solid 1px #777" width="400" height="300" frameborder="0" scrolling="no"></iframe>
     </div>
+    <div class "container" id = "quote">
+        <p>Perfection is not attainable, but if we chase perfection we can catch excellence. --- Vince Lombardi </p>
+    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
 
