Got a simpler better looking calendar
fixed some positioning issues too

--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -28,6 +28,14 @@ function checkTime(i) {
 </script>
 <style>
     .center { text-align: center; }
+
+    div {
+    	padding-top: 50px;
+    	padding-right: 30px;
+    	padding-bottom: 50px;
+    	padding-left: 30px;
+    }
+
 </style>
   
 </head>
@@ -53,9 +61,13 @@ function checkTime(i) {
         </div>
     </div>
 
+    <div>
     <iframe id = "spotify" src="https://embed.spotify.com/?uri=spotify%3Aalbum%3A5IOyYIEMoaiWQpFz2O5vxY" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
+    </div>
+    <div>
     <div class = "container" id = "calendar">
-        <iframe src="https://calendar.google.com/calendar/embed?height=300&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=en.usa%23holiday%40group.v.calendar.google.com&amp;color=%23691426&amp;ctz=America%2FNew_York" style="border:solid 1px #777" width="400" height="300" frameborder="0" scrolling="no"></iframe>
+        <iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showPrint=0&amp;showTabs=0&amp;height=300&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=en.usa%23holiday%40group.v.calendar.google.com&amp;color=%23691426&amp;ctz=America%2FNew_York" style="border:solid 1px #777" width="400" height="300" frameborder="0" scrolling="no"></iframe>
+    </div>
     </div>
     <div class "container" id = "quote">
         <p>Perfection is not attainable, but if we chase perfection we can catch excellence. --- Vince Lombardi </p>
