Updated music player

--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -62,7 +62,7 @@ function checkTime(i) {
     </div>
 
     <div>
-    <iframe id = "spotify" src="https://embed.spotify.com/?uri=spotify%3Aalbum%3A5IOyYIEMoaiWQpFz2O5vxY" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
+        <iframe style="border:none" src="http://files.podsnack.com/iframe/embed.html?hash=a1ki4nuu&t=1459280578" width="460" height="60" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
     </div>
     <div>
     <div class = "container" id = "calendar">
