add picture, moved music player to bottom

--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -31,11 +31,12 @@ function checkTime(i) {
 <style>
     .center { text-align: center; }
 
+
     div {
-    	padding-top: 50px;
-    	padding-right: 30px;
-    	padding-bottom: 50px;
-    	padding-left: 30px;
+    	padding-top: 20px;
+    	padding-right: 20px;
+    	padding-bottom: 5px;
+    	padding-left: 20px;
     }
 
 </style>
@@ -43,6 +44,9 @@ function checkTime(i) {
 </head>
 <body class="body page-index clearfix">
     <p class = "title">Magic Mirror</p>
+     <div>
+        <img src="picture.jpeg" alt="Mountain View" style="width:512px;height:512;"></div>
+    </div>
   
     <body onload="startTime()">
 
@@ -64,7 +68,7 @@ function checkTime(i) {
     </div>
 
     <div>
-        <iframe style="border:none" src="http://files.podsnack.com/iframe/embed.html?hash=a1ki4nuu&t=1460070913" width="460" height="60" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+        <iframe id = "music" style="border:none" src="http://files.podsnack.com/iframe/embed.html?hash=a1ki4nuu&t=1460070913" width="460" height="60" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
     </div>
     <div>
     <div class = "container" id = "calendar">
