add button to see video

--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -40,12 +40,21 @@ function checkTime(i) {
     	padding-left: 20px;
     }
 
+    .videoButton {
+         background-color: white;
+    }
+
 </style>
   
 </head>
 <body class="body page-index clearfix">
+    <div class = "content">
+        <button class ="videoButton" onclick="location.href='index2.html'">  Go to video </button>
+    </div>
     <p class = "title">Magic Mirror</p>
-     <div>
+
+
+    <div>
         <img src="picture.jpeg" alt="Mountain View" style="width:512px;height:512;"></div>
     </div>
   
@@ -79,11 +88,14 @@ function checkTime(i) {
 	 <div class "container" id = "quote">
         <p>Perfection is not attainable, but if we chase perfection we can catch excellence. --- Vince Lombardi </p>
     </div>
+    <div>
+    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
 
     <script src="js/jquery.simpleWeather.js"></script>
 
     <script src="js/weather.js"></script>
+
 </body>
 </html>
