--- a/frontEnd/createAccount.html
+++ b/frontEnd/createAccount.html
@@ -5,6 +5,25 @@
         <link rel="stylesheet" href="css/login.css">
         <script src="js/createAccount.js"></script>
 
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js"></script>
+
+<!-- jQuery UI theme or Bootstrap (optional, if you create a custom theme) -->
+<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/ui-lightness/jquery-ui.css" rel="stylesheet">
+<link href="css/bootstrap.min.css" rel="stylesheet">
+
+<!-- jQuery UI position utility (optional, if you position the keyboard yourself) -->
+<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
+
+<!-- keyboard widget css & script -->
+<link href="css/keyboard.css" rel="stylesheet">
+<script src="js/jquery.keyboard.js"></script>
+
+<!-- css for the preview keyset extension -->
+<link href="css/keyboard-previewkeyset.css" rel="stylesheet">
+
+<!-- keyboard optional extensions - include ALL (includes mousewheel) -->
+<script src="js/jquery.keyboard.extension-all.js"></script>
+<script src="js/addKeyboard.js"></script>
 
     </head>
     <body>
@@ -16,8 +35,9 @@
                             <label for="username">Username</label>
                             <li>
 
-                                <input id="key" class="ui-keyboard-input ui-widget-content ui-corner-all ui-autocomplete-input" aria-haspopup="true"type="text" name="username" placeholder="username" required>
-                                <script>"js/addKeyboard.js"</script>
+                                <input id="test" class="ui-keyboard-input ui-widget-content ui-corner-all ui-autocomplete-input" aria-haspopup="true" type="text" name="username" placeholder="username" required>
+                                
+                                
                             </li>
                             <label for="password">Password</label>
                             <li>
