Added visualizations goto button
Please remove the random visualizations screensaver thing

--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -52,6 +52,8 @@
 <body class="body page-index clearfix">
     <div class = "content">
         <button class ="videoButton" onclick="location.href='index2.html'">  Go to video </button>
+        <br>
+        <button class ="videoButton" onclick="location.href='visualizationsIndex.html'"> Go to visualizations </button>
     </div>
     <p class = "title">Magic Mirror</p>
     <body onload="startTime()">
