--- a/frontEnd/visualizationsIndex.html
+++ b/frontEnd/visualizationsIndex.html
@@ -30,13 +30,14 @@
 
 			<div class="col-sm-2"></div>
 			<div class="col-sm-8 text-center">
-				<a class="btn btn-lg btn-block btn-primary" href="visualizations/flock.html">Flock</a>
+				<button class="btn btn-lg btn-block btn-primary" href="visualizations/flock.html">Flock</button>
 				<div></div>
-				<a class="btn btn-lg btn-block btn-primary" href="visualizations/linespheres.html">Linespheres</a>
+				<button class="btn btn-lg btn-block btn-primary" href="visualizations/linespheres.html">Linespheres</button>
 				<div></div>
-				<a class="btn btn-lg btn-block btn-primary" href="visualizations/waves.html">Waves</a>
+				<button class="btn btn-lg btn-block btn-primary" href="visualizations/waves.html">Waves</button>
 				<div></div>
-				<a class="btn btn-lg btn-block btn-primary" href="visualizations/particles.html">Particles</a>
+				<button class="btn btn-lg btn-block btn-primary" href="visualizations/particles.html">Particles</button
+				>
 			</div>	
 		</div>
 	</body>
