--- a/frontEnd/login.html
+++ b/frontEnd/login.html
@@ -8,25 +8,23 @@
         <script src="js/login.js"></script>
 
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js"></script>
 
-<!-- jQuery UI theme or Bootstrap (optional, if you create a custom theme) -->
-<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/ui-lightness/jquery-ui.css" rel="stylesheet">
-<link href="css/bootstrap.min.css" rel="stylesheet">
 
-<!-- jQuery UI position utility (optional, if you position the keyboard yourself) -->
-<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
+<!-- jQuery (required) & jQuery UI + theme (optional) -->
+	<link href="docs/css/jquery-ui.min.css" rel="stylesheet">
+	<script src="docs/js/jquery-latest.min.js"></script><style type="text/css"></style>
+	<script src="docs/js/jquery-ui.min.js"></script>
+	<script src="docs/js/jquery-migrate-1.3.0.min.js"></script>
 
-<!-- keyboard widget css & script -->
-<link href="css/keyboard.css" rel="stylesheet">
-<script src="js/jquery.keyboard.js"></script>
+	<!-- keyboard widget css & script (required) -->
+	<link href="css/keyboard.css" rel="stylesheet">
+	<script src="js/jquery.keyboard.js"></script>
 
-<!-- css for the preview keyset extension -->
-<link href="css/keyboard-previewkeyset.css" rel="stylesheet">
-
-<!-- keyboard optional extensions - include ALL (includes mousewheel) -->
-<script src="js/jquery.keyboard.extension-all.js"></script>
-
+	<!-- keyboard extensions (optional) -->
+	<script src="js/jquery.mousewheel.js"></script>
+	<script src="js/jquery.keyboard.extension-typing.js"></script>
+	<script src="js/jquery.keyboard.extension-autocomplete.js"></script>
+	<script src="js/jquery.keyboard.extension-caret.js"></script>
 
 	
     </head>
@@ -39,7 +37,7 @@
                             
                             <li>
 
-                                <input id="text" type="text" class="ui-keyboard-input ui-widget-content ui-corner-all ui-autocomplete-input" aria-haspopup="true" name="username" placeholder="username" required>
+                                <input id="text" type="text" aria-haspopup="true" name="username" placeholder="username" required>
 	<script>// Autocomplete demo
 var availableTags = ["ActionScript", "AppleScript", "Asp", "BASIC", "C", "C++", "Clojure",
 	"COBOL", "ColdFusion", "Erlang", "Fortran", "Groovy", "Haskell", "Java", "JavaScript",
