--- a/frontEnd/visualizationsIndex.html
+++ b/frontEnd/visualizationsIndex.html
@@ -20,8 +20,6 @@
 	<body>
 		<script   src="https://code.jquery.com/jquery-2.2.2.min.js"   integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI="   crossorigin="anonymous"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-		<script src="threejs/build/three.min.js"></script>
-		<script src="threejs/js/Detector.js"></script>
 
 		<div class="container text-center">
 			<div style="height: 50px;"></div>
@@ -30,13 +28,13 @@
 
 			<div class="col-sm-2"></div>
 			<div class="col-sm-8 text-center">
-				<button class="btn btn-lg btn-block btn-primary" href="visualizations/flock.html">Flock</button>
+				<a class="btn btn-lg btn-block btn-primary" href="visualizations/flock.html">Flock</a>
 				<div></div>
-				<button class="btn btn-lg btn-block btn-primary" href="visualizations/linespheres.html">Linespheres</button>
+				<a class="btn btn-lg btn-block btn-primary" href="visualizations/linespheres.html">Linespheres</a>
 				<div></div>
-				<button class="btn btn-lg btn-block btn-primary" href="visualizations/waves.html">Waves</button>
+				<a class="btn btn-lg btn-block btn-primary" href="visualizations/waves.html">Waves</a>
 				<div></div>
-				<button class="btn btn-lg btn-block btn-primary" href="visualizations/particles.html">Particles</button
+				<a class="btn btn-lg btn-block btn-primary" href="visualizations/particles.html">Particles</a
 				>
 			</div>	
 		</div>
