--- a/frontEnd/GoogleCalendar.html
+++ b/frontEnd/GoogleCalendar.html
@@ -31,5 +31,5 @@
     </div>
     </div>
                 <div></div>
-                <a class="btn btn-primary" href="./widgets/widgets.html">Particles </a>  
+                <a class="btn btn-primary" href="./index.html">Home </a>  
 </html>
