--- a/frontEnd/WeatherApp.html
+++ b/frontEnd/WeatherApp.html
@@ -63,7 +63,7 @@ function checkTime(i) {
     </div>
 
                 <div></div>
-                <a class="btn btn-primary" href="./widgets/widgets.html">Particles </a>  
+                <a class="btn btn-primary" href="./index.html">Home </a>  
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
 
     <script src="js/jquery.simpleWeather.js"></script>
