--- a/frontEnd/widgets/widgets.html
+++ b/frontEnd/widgets/widgets.html
@@ -12,24 +12,21 @@
 <body>
 
 <div class="container">
-  <h2>Rounded Corners</h2>
-  <p>GANG GANG GANG GANG GANG! I DONT FUCK WITH YOU IF YOU DON'T GANG BANG.</p>
-  <!-- This Weather Image was stole from yahoo, sue me bitch. -->         
-  <p class="MFWeatherTxt">Mother Fucking Weather</p>
+  <h2>Applications</h2>
+    <!-- This Weather Image was stole from yahoo -->         
+  <p class="MFWeatherTxt">Weather</p>
   <a href="/WeatherApp.html"> 
   <img src="weather.png" class="MFWeather img-rounded" alt="Weather" width="100" height="100"> </a> 
   
-  <!-- calendar was stole from some punk ass. -->
-  <p class="KCCalendarTxt">Killer Cronic Calendar</p>
+  <!-- calendar was stole from somewhere. -->
+  <p class="KCCalendarTxt">Calendar</p>
   <a href="/GoogleCalendar.html">
   <img src="./calendar-icon.gif" class="KCCalendar" alt="Calendar" style="width: 100px;height: 100px;">
   </a>
-  <p class="KAClockTxt">Kick Ass Clock</p>
-  <a href="../index.html">
+  <p class="KAClockTxt">Clock</p>
+  <a href="/LiveTime.html">
   <img src="./clock.png" class="KAClock" alt="Clock" style="width: 100px;height: 100px;">
   </a>
-
-</div>
 
 </body>
 </html>
