added button for email
Should work if you were already log in through Google.

--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -58,6 +58,8 @@
   <div class = "content">
     <button class ="videoButton" onclick="location.href='index2.html'">  Go to video </button>
     <br>
+    <button class ="videoButton" onclick="location.href='https://mail.google.com/mail/u/0/#inbox'">  Go to Email </button>
+    <br>
     <button class ="videoButton" onclick="location.href='visualizationsIndex.html'"> Go to visualizations </button>
     <br>
     <button class ="videoButton" onclick="location.href='./widgets/widgets.html'"> Go to settings </button>
