Adding some of my features

--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -56,13 +56,13 @@
 <body onload="startTime()" class="body page-index clearfix">
 
   <div class = "content">
-    <button class ="videoButton" onclick="location.href='index2.html'">  Go to video </button>
+    <button class ="videoButton" onclick="location.href='index2.html'">  Go to Video </button>
     <br>
     <button class ="videoButton" onclick="location.href='https://mail.google.com/mail/u/0/#inbox'">  Go to Email </button>
     <br>
-    <button class ="videoButton" onclick="location.href='visualizationsIndex.html'"> Go to visualizations </button>
+    <button class ="videoButton" onclick="location.href='visualizationsIndex.html'"> Go to Visualizations </button>
     <br>
-    <button class ="videoButton" onclick="location.href='./widgets/widgets.html'"> Go to settings </button>
+    <button class ="videoButton" onclick="location.href='./widgets/widgets.html'"> Go to Applications</button>
   </div>
 
   <p class = "title">Magic Mirror</p>
