--- a/frontEnd/widgets/widgets.html
+++ b/frontEnd/widgets/widgets.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Sweg Sweg Bitch Get At Me</title>
+  <title>Applications</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -27,6 +27,29 @@
   <a href="/LiveTime.html">
   <img src="./clock.png" class="KAClock" alt="Clock" style="width: 100px;height: 100px;">
   </a>
+  <p class="gearBoxTxt">Settings</p>
+  <a href="/settings.html">
+  <img src="./gear.png" class="gearBox" alt="Settings" style="width: 100px;height: 100px;">
+  </a>
+  <p class="gearBoxTxt">Settings</p>
+  <a href="/settings.html">
+  <img src="./gear.png" class="gearBox" alt="Settings" style="width: 100px;height: 100px;">
+  </a>
+  <p class="photoTxt">Photo Gallery</p>
+  <a href="/gallery.html">
+  <img src="./camera-icon.png" class="photo" alt="Photo" style="width: 100px;height: 100px;">
+  </a>
+  <!--
+  <img src="./calendar-icon.gif" class="KCCalendar" alt="Calendar" style="width: 100px;height: 100px;">
 
+  
+
+  <button class ="videoButton" onclick="location.href='index2.html'">  Go to Video </button>
+    <br>
+    <button class ="videoButton" onclick="location.href='https://mail.google.com/mail/u/0/#inbox'">  Go to Email </button>
+    <br>
+    <button class ="videoButton" onclick="location.href='visualizationsIndex.html'"> Go to Visualizations </button>
+    <br>
+  -->
 </body>
 </html>
