--- a/frontEnd/GoogleCalendar.html
+++ b/frontEnd/GoogleCalendar.html
@@ -10,26 +10,24 @@
 
 </script>
 <style>
-    .center { text-align: center; }
-
-    div {
-        padding-top: 50px;
-        padding-right: 30px;
-        padding-bottom: 50px;
-        padding-left: 30px;
+    .calendar{
+      text-align: center;
+      margin:0 auto;
     }
+
 
 </style>
   
 </head>
-<body class="body page-index clearfix">
-    <p class = "title">Magic Mirror Calendar</p>
+<body class="body">
+
     
-    <div>
-    <div class = "calendar container" >
-        <iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showPrint=0&amp;showTabs=0&amp;height=300&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=en.usa%23holiday%40group.v.calendar.google.com&amp;color=%23691426&amp;ctz=America%2FNew_York" style="border:solid 1px #777" width="1000" height="500" frameborder="0" scrolling="no"></iframe>
-    </div>
+    <div class="col-xs-6 col-xs-offset-3">
+        <div class = "calendar" >
+          <iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showPrint=0&amp;showTabs=0&amp;height=300&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=en.usa%23holiday%40group.v.calendar.google.com&amp;color=%23691426&amp;ctz=America%2FNew_York" style="border:solid 1px #777" width="1000" height="500" frameborder="0" scrolling="no"></iframe>
+        </div>
+        <a class="btn btn-primary" href="./index.html">Home </a>  
     </div>
                 <div></div>
-                <a class="btn btn-primary" href="./index.html">Home </a>  
+
 </html>
