--- a/frontEnd/alarm.html
+++ b/frontEnd/alarm.html
@@ -1,32 +1,9 @@
 <!doctype html>
 <html>
 <head>
-	<style type="text/css">
-
-	#jsalarmclock{
-		font-family: Tahoma;
-		font-weight: bold;
-		font-size: 12px;
-	}
-
-	#jsalarmclock div{
-		margin-bottom: 0.8em;
-	}
-
-	#jsalarmclock div.leftcolumn{
-		float: left;
-		width: 150px;
-		font-size: 13px;
-		background-color: lightyellow;
-		clear: left;
-	}
-
-	#jsalarmclock span{
-		margin-right: 5px;
-	}
-
-	</style>
-
+	<link rel="stylesheet" href="css/alarm.css">
+	<script src="js/alarm.js"></script>
+<!--
 	<script type="text/javascript">
 
 /***********************************************
@@ -97,7 +74,7 @@ var jsalarm={
 }
 
 </script>
-
+-->
 </head>
 <body>
 	<form action="" method="">
@@ -109,11 +86,12 @@ var jsalarm={
 		</div>
 	</form>
 
-
+<!--
 	<script type="text/javascript">
 
 	jsalarm.init()
 
 	</script>
+-->
 </body>
 </html>
