Added the gesture to the calendar app

--- a/frontEnd/widgets/widgets.html
+++ b/frontEnd/widgets/widgets.html
@@ -39,6 +39,12 @@
   <a href="/gallery.html">
   <img src="./camera-icon.png" class="photo" alt="Photo" style="width: 100px;height: 100px;">
   </a>
+
+    </a>
+  <p class="visTxt">Visualizations</p>
+  <a href="../visualizationsIndex.html">
+  <img src="./visualizations.png" class="vis" alt="vis" style="width: 125px;height: 125px;">
+  </a>
   <!--
   <img src="./calendar-icon.gif" class="KCCalendar" alt="Calendar" style="width: 100px;height: 100px;">
 
