--- a/frontEnd/Gallery.html
+++ b/frontEnd/Gallery.html
@@ -6,13 +6,42 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/gallery.css">
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
 <body>
+<header class="island">
+   <h1>Flickr gallery</h1>
+   <form class="js-form-search form-search" action="/search" method="get" role="search">
+      <label for="query">Search:</label>
+      <input type="search" name="query" id="query" placeholder="Search" required />
+      <input type="submit" value="Search" />
+   </form>
+</header>
+<script>
+*,
+*:before,
+*:after {
+   -moz-box-sizing: border-box;
+   box-sizing: border-box;
+}
+</script>
+<div class="island">
+   <div class="js-gallery gallery">
+      <img src="" class="js-gallery__image" />
+      <button class="js-gallery__arrow--left gallery__arrow gallery__arrow--left">
+         <span class="visually-hidden">Previous photo</span>
+      </button>
+      <button class="js-gallery__arrow--right gallery__arrow gallery__arrow--right">
+         <span class="visually-hidden">Next photo</span>
+      </button>
+   </div>
+   <div class="island thumbnails">
+   <ul class="js-thumbnails__list thumbnails__list"></ul>
+   <ol class="js-thumbnails__pager thumbnails__pager"></ol>
+</div>
+</div>
 
-<div class="container">
-  <h2>Gallery</h2>
-    </div>
 </body>
 </html>
