--- a/frontEnd/login.html
+++ b/frontEnd/login.html
@@ -6,7 +6,7 @@
         <!-- jQuery (necessary for Leapstrap's JavaScript plugins) -->
         <script src="https://code.jquery.com/jquery.js"></script>
         
-<!-- jQuery (required) & jQuery UI + theme (optional) -->
+	<!-- jQuery (required) & jQuery UI + theme (optional) -->
 	<link href="docs/css/jquery-ui.min.css" rel="stylesheet">
 	<script src="docs/js/jquery-ui.min.js"></script>
 	<script src="docs/js/jquery-migrate-1.3.0.min.js"></script>
@@ -33,68 +33,70 @@
                             <li>
 
                                 <input id="text" type="text" aria-haspopup="true" name="username" placeholder="username" required>
-	<script>// Autocomplete demo
-var availableTags = ["ActionScript", "AppleScript", "Asp", "BASIC", "C", "C++", "Clojure",
-	"COBOL", "ColdFusion", "Erlang", "Fortran", "Groovy", "Haskell", "Java", "JavaScript",
-	"Lisp", "Perl", "PHP", "Python", "Ruby", "Scala", "Scheme" ];
+								<script>// Autocomplete demo
+									var availableTags = ["ActionScript", "AppleScript", "Asp", "BASIC", "C", "C++", "Clojure",
+									"COBOL", "ColdFusion", "Erlang", "Fortran", "Groovy", "Haskell", "Java", "JavaScript",
+									"Lisp", "Perl", "PHP", "Python", "Ruby", "Scala", "Scheme" ];
 
-$('#text')
-	.keyboard({ layout: 'qwerty' })
-	.autocomplete({
-		source: availableTags
-	})
-	// position options added after v1.23.4
-	.addAutocomplete({
-		position : {
-			of : null,        // when null, element will default to kb.$keyboard
-			my : 'right top', // 'center top', (position under keyboard)
-			at : 'left top',  // 'center bottom',
-			collision: 'flip'
-		}
-	})
-	.addTyping();</script>
+									$('#text')
+										.keyboard({ layout: 'qwerty' })
+										.autocomplete({
+											source: availableTags
+										})
+										// position options added after v1.23.4
+										.addAutocomplete({
+											position : {
+												of : null,        // when null, element will default to kb.$keyboard
+												my : 'right top', // 'center top', (position under keyboard)
+												at : 'left top',  // 'center bottom',
+												collision: 'flip'
+											}
+										})
+										.addTyping();
+								</script>
 
-				</li>
-                            <label for="password">Password</label>
-                            <li>
-                                <input id="pswrd" type="password" name="password" placeholder="password" required>
-<script>// Autocomplete demo
-var availableTags = ["ActionScript", "AppleScript", "Asp", "BASIC", "C", "C++", "Clojure",
-	"COBOL", "ColdFusion", "Erlang", "Fortran", "Groovy", "Haskell", "Java", "JavaScript",
-	"Lisp", "Perl", "PHP", "Python", "Ruby", "Scala", "Scheme" ];
+						</li>
+                        <label for="password">Password</label>
+                        <li>
+                            <input id="pswrd" type="password" name="password" placeholder="password" required>
+							<script>// Autocomplete demo
+								var availableTags = ["ActionScript", "AppleScript", "Asp", "BASIC", "C", "C++", "Clojure",
+									"COBOL", "ColdFusion", "Erlang", "Fortran", "Groovy", "Haskell", "Java", "JavaScript",
+									"Lisp", "Perl", "PHP", "Python", "Ruby", "Scala", "Scheme" ];
 
-$('#pswrd')
-	.keyboard({ layout: 'qwerty' })
-	.autocomplete({
-		source: availableTags
-	})
-	// position options added after v1.23.4
-	.addAutocomplete({
-		position : {
-			of : null,        // when null, element will default to kb.$keyboard
-			my : 'right top', // 'center top', (position under keyboard)
-			at : 'left top',  // 'center bottom',
-			collision: 'flip'
-		}
-	})
-	.addTyping();</script>
-                            </li>
-                            <li>
-                                    <input type="submit" value="Login">
-                            </li>
-                            <li>
-                                <a href="google-login" style="text-decoration : none">
-                                    <input type="button" value="Google Login">
-                                </a>
-                            </li>
-                            <li>
-                                <a href="createAccount.html" style="text-decoration : none">
-                                    <input type="button" value="Create an Account">
-                                </a>
-                            </li>
-                        </ul>
-                    </form>
-                </section>
-            </div>
+								$('#pswrd')
+									.keyboard({ layout: 'qwerty' })
+									.autocomplete({
+										source: availableTags
+									})
+									// position options added after v1.23.4
+									.addAutocomplete({
+										position : {
+											of : null,        // when null, element will default to kb.$keyboard
+											my : 'right top', // 'center top', (position under keyboard)
+											at : 'left top',  // 'center bottom',
+											collision: 'flip'
+										}
+									})
+									.addTyping();
+								</script>
+                        </li>
+                        <li>
+                            <input type="submit" value="Login">
+                        </li>
+                        <li>
+                            <a href="google-login" style="text-decoration : none">
+                                <input type="button" value="Google Login">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="createAccount.html" style="text-decoration : none">
+                                <input type="button" value="Create an Account">
+                            </a>
+                        </li>
+                    </ul>
+                </form>
+            </section>
+        </div>
     </body>
 </html>
