Home page updates

--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -102,13 +102,13 @@
 		<div class = "container">
 				<ul>
 					<li>
-						<button type="button" onclick="location.href='GoogleCalendar.html'"><img src="images/calendar-icon.gif"></button>
+						<a href="GoogleCalendar.html"><img src="images/calendar-icon.gif"></a>
 					</li>
 					<li>
-						<button type="button" onclick="location.href='https://mail.google.com/mail/u/0/#inbox'"><img src="images/email-icon.jpg"></button>
+						<a href="https://mail.google.com/mail/u/0/#inbox"><img src="images/email-icon.jpg"></a>
 					</li>
 					<li>
-						<button id="alarmButton" type="button"><img src="images/alarm.jpg"></button>
+						<a><button id="alarmButton" type="button"><img src="images/alarm.jpg"></button></a>
 					</li>
 				</ul>
 		</div>
