--- a/frontEnd/GoogleCalendar.html
+++ b/frontEnd/GoogleCalendar.html
@@ -47,7 +47,7 @@
     function goBack(error){
     $('errors').set('html', 'Your Gestures error: ' +error);
     if (error <= .25) {
-      document.location.href = '../../MagicMirror/frontEnd/index.html';
+      document.location.href = '/index.html';
     }
     
     }
