created flying game

--- a/frontEnd/visualizationsIndex.html
+++ b/frontEnd/visualizationsIndex.html
@@ -34,8 +34,9 @@
 				<div></div>
 				<a class="btn btn-lg btn-block btn-primary" href="visualizations/waves.html">Waves</a>
 				<div></div>
-				<a class="btn btn-lg btn-block btn-primary" href="visualizations/particles.html">Particles</a
-				>
+				<a class="btn btn-lg btn-block btn-primary" href="visualizations/particles.html">Particles</a>
+				<div></div>
+				<a class="btn btn-lg btn-block btn-primary" href="visualizations/flyingGame.html">Flying</a>
 			</div>	
 		</div>
 	</body>
