Inverted colors of Hompage images, Added .cur file

--- a/frontEnd/login.html
+++ b/frontEnd/login.html
@@ -22,8 +22,9 @@
 	<script src="js/jquery.keyboard.extension-caret.js"></script>
 	<script src="js/login.js"></script>
 	
+	
     </head>
-    <body>
+    <body style="cursor: url(chrome-crosshair.cur), auto">
             <div class="container">
                 <section class="loginform cf">
                     <form name="login" action=" " method="post" accept-charset="utf-8" id="login-form">
