--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -102,7 +102,7 @@
 		<div class = "container">
 				<ul>
 					<li>
-						<button type="button" onclick="location.href='GoogleCalendar.html'"><img src="images/calendar-icon.gif"></button>
+						<button type="button" onclick="location.href='GoogleCalendar.html'"><img src="images/calendar.png"></button>
 					</li>
 					<li>
 						<button type="button" onclick="location.href='https://mail.google.com/mail/u/0/#inbox'"><img src="images/email-icon.jpg"></button>
