--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -103,18 +103,19 @@
 				<ul>
 					<li>
 
-						<button type="button" onclick="location.href='GoogleCalendar.html'"><img src="images/calendar.png"></button>
+						<a href="GoogleCalendar.html"><img src="images/calendar.png"></a>
 
 					</li>
 					<li>
 						<a href="https://mail.google.com/mail/u/0/#inbox"><img src="images/email-icon.jpg"></a>
 					</li>
 					<li>
-						<a><button id="alarmButton" type="button"><img src="images/alarm.jpg"></button></a>
+						<a href="visualizationsIndex.html"><img src="images/visualizationsIcon.jpg"></a>
 					</li>
 					<li>
-						<button type="button" onclick="location.href='./visualizationsIndex.html'"><img src="images/visualizationsIcon.png"></button>
+						<a><button id="alarmButton" type="button"><img src="images/alarm.jpg"></button></a>
 					</li>
+
 				</ul>
 		</div>
 	</div>
