Cursor is changed for all pages

--- a/frontEnd/login.html
+++ b/frontEnd/login.html
@@ -24,7 +24,7 @@
 	
 	
     </head>
-    <body style="cursor: url(chrome-crosshair.cur), auto">
+    <body>
             <div class="container">
                 <section class="loginform cf">
                     <form name="login" action=" " method="post" accept-charset="utf-8" id="login-form">
